--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,3 +30,12 @@ spring:
         dialect:
           org.hibernate.dialect.PostgreSQL9Dialect
     database-plataform: org.hibernate.dialect.PostgreSQL9Dialect
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    service-url:
+      defaultZone: http://localhost:8081
+    fetch-registry: true
+    register-with-eureka: true
