--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,6 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://localhost:8081
+      defaultZone: http://localhost:8081/eureka
     fetch-registry: true
     register-with-eureka: true
