--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <groupId>com.conciliacaocob</groupId>
         <artifactId>conciliacaoCob</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <relativePath>conciliacaoCob/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
         <!-- lookup parent from repository -->
     </parent>
 
